--- a/jukebox_frontend_react/index.css
+++ b/jukebox_frontend_react/index.css
@@ -189,3 +189,12 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+
+.filter--container > input {
+  border-radius: 6px;
+  height: 3.2vh;
+}
+
+.filter--container > input:focus {
+  outline:none;
+}
