--- a/local_react_frontend/src/index.css
+++ b/local_react_frontend/src/index.css
@@ -66,6 +66,7 @@ body {
     height: 100%;
     aspect-ratio: 1;
     transform: translateX(-54px) rotateY(90deg);
+    cursor: pointer;
 }
   
 .cover > a {
@@ -77,7 +78,7 @@ body {
 .cover > a > img {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* or 'contain' depending on your preference */
+    object-fit: cover;
   }
 
 .white {
@@ -202,6 +203,7 @@ body {
 
 /* YouTube Player */
 .youtube--player--container {
+  margin-top: 2vh;
   display: flex;
 }
 
